Fixed spacings

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -12,6 +12,10 @@
     &--padded {
         padding-block: 7rem;
     }
+
+    &--outer-space {
+        margin-block: 7rem;
+    }
 }
 
 
